Avera/curso-kubernetes-essentials-main/modulo-09-ingress/A07-path-exact/aplicacao.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-site
  labels:
    app: kubernetes-site
spec:
  progressDeadlineSeconds: 20
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-site
  template:
    metadata:
      labels:
        app: kubernetes-site
    spec:
      containers:
      - name: kubernetes-site
        image: containous/whoami
        ports:
        - containerPort: 80
          name: kubernetes-site
      - name: load-test
        image: averaacademy/kubernetes:load-test
        ports:
        - containerPort: 8080
          name: load-test
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-site-service
  labels:
    app: kubernetes-site-service
spec:
  selector:
    app: kubernetes-site
  ports:
    - name: kubernetes-site
      protocol: TCP
      port: 80
      targetPort: kubernetes-site
    - name: load-test
      protocol: TCP
      port: 4200
      targetPort: load-test
