Avera/curso-kubernetes-essentials-main/modulo-09-ingress/A07-path-exact/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-site
spec:
  rules:
  - host: kubernetes.averaacademy
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-site-service
            port:
              number: 80
      - path: /Cpu
        pathType: Exact
        backend:
          service:
            name: kubernetes-site-service
            port:
              number: 4200
      - path: /swagger
        pathType: Exact
        backend:
          service:
            name: kubernetes-site-service
            port:
              number: 4200
      - path: /swagger/v1/swagger.json
        pathType: Exact
        backend:
          service:
            name: kubernetes-site-service
            port:
              number: 4200
